@@ -9,7 +9,7 @@
     <parent>
         <groupId>io.micronaut</groupId>
         <artifactId>micronaut-parent</artifactId>
-        <version>2.4.1</version>
+        <version>3.2.7</version>
     </parent>
 
     <developers>
@@ -30,11 +30,13 @@
 
 
     <properties>
-        <jdk.version>11</jdk.version>
-        <release.version>11</release.version>
-        <micronaut.version>2.1.3</micronaut.version>
-        <micronaut.data.version>2.1.1</micronaut.data.version>
+        <jdk.version>17</jdk.version>
+        <release.version>17</release.version>
+        <micronaut.version>3.2.7</micronaut.version>
+        <micronaut.data.version>3.2.2</micronaut.data.version>
         <micronaut.configuration.version>1.3.1</micronaut.configuration.version>
+        <micronaut.multitenancy.version>2.2.3</micronaut.multitenancy.version>
+        <version.io.micronaut.sql.hibernate-jpa>4.1.0</version.io.micronaut.sql.hibernate-jpa>
 
         <!-- project info -->
         <project.author.name>Stefan Wiedemann</project.author.name>
@@ -51,6 +53,7 @@
 
         <!-- docker -->
         <exec.mainClass>org.fiware.mintaka.Application</exec.mainClass>
+        <image.registry>docker.io</image.registry>
         <image.repository>fiware</image.repository>
         <image.tag>latest</image.tag>
         <rhel.username>rhel-user</rhel.username>
@@ -65,8 +68,8 @@
         <version.ch.qos.logback>1.2.3</version.ch.qos.logback>
 
         <!-- code gen -->
-        <version.org.openapitools.generator-maven-plugin>5.0.0</version.org.openapitools.generator-maven-plugin>
-        <version.io.kokuwa.micronaut.codegen>2.1.0</version.io.kokuwa.micronaut.codegen>
+        <version.org.openapitools.generator-maven-plugin>5.1.0</version.org.openapitools.generator-maven-plugin>
+        <version.io.kokuwa.micronaut.codegen>2.2.1</version.io.kokuwa.micronaut.codegen>
 
         <!-- json -->
         <version.com.google.guava>30.1.1-jre</version.com.google.guava>
@@ -79,11 +82,11 @@
         <!-- test -->
         <version.org.testcontainers>1.15.1</version.org.testcontainers>
         <version.org.mockito.mockito-all>1.10.19</version.org.mockito.mockito-all>
-        <version.org.mockito.mockito-junit-jupiter>2.23.0</version.org.mockito.mockito-junit-jupiter>
+        <version.org.mockito.mockito-junit-jupiter>4.2.0</version.org.mockito.mockito-junit-jupiter>
         <version.org.awaitility>4.0.3</version.org.awaitility>
-        <version.org.jacoco.maven-plugin>0.8.6</version.org.jacoco.maven-plugin>
+        <version.org.jacoco.maven-plugin>0.8.7</version.org.jacoco.maven-plugin>
         <version.org.eluder.coveralls.maven-plugin>2.2.0</version.org.eluder.coveralls.maven-plugin>
-        <version.com.github.spotbugs.maven-plugin>4.0.0</version.com.github.spotbugs.maven-plugin>
+        <version.com.github.spotbugs.maven-plugin>4.5.2.0</version.com.github.spotbugs.maven-plugin>
         <version.org.apache.maven.plugins.maven-site-plugin>3.9.1</version.org.apache.maven.plugins.maven-site-plugin>
         <version.org.apache.maven.plugins.maven-javadoc-plugin>3.2.0</version.org.apache.maven.plugins.maven-javadoc-plugin>
         <version.com.google.code.findbugs.annotations>3.0.1u2</version.com.google.code.findbugs.annotations>
@@ -148,32 +151,23 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>io.micronaut.data</groupId>
-            <artifactId>micronaut-data-hibernate-jpa</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.hibernate</groupId>
-                    <artifactId>hibernate-core</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
             <groupId>io.micronaut</groupId>
             <artifactId>micronaut-management</artifactId>
         </dependency>
         <dependency>
+            <groupId>io.micronaut.data</groupId>
+            <artifactId>micronaut-data-hibernate-jpa</artifactId>
+            <version>${micronaut.data.version}</version>
+        </dependency>
+        <dependency>
             <groupId>io.micronaut.sql</groupId>
             <artifactId>micronaut-hibernate-jpa</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.hibernate</groupId>
-                    <artifactId>hibernate-core</artifactId>
-                </exclusion>
-            </exclusions>
+            <version>${version.io.micronaut.sql.hibernate-jpa}</version>
         </dependency>
         <dependency>
             <groupId>io.micronaut</groupId>
             <artifactId>micronaut-multitenancy</artifactId>
+            <version>${micronaut.multitenancy.version}</version>
         </dependency>
         <dependency>
             <groupId>io.micronaut.cache</groupId>
@@ -190,11 +184,16 @@
             <version>${micronaut.configuration.version}</version>
         </dependency>
 
-        <!-- dedicated hibernate core to fix vulnarability in previous version -->
         <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-core</artifactId>
-            <version>5.6.3.Final</version>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+            <version>1</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/io.reactivex.rxjava2/rxjava -->
+        <dependency>
+            <groupId>io.reactivex.rxjava2</groupId>
+            <artifactId>rxjava</artifactId>
+            <version>2.2.21</version>
         </dependency>
 
         <!-- json -->
@@ -531,6 +530,13 @@
                 </executions>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>@{argLine} --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>${version.org.jacoco.maven-plugin}</version>
@@ -610,184 +616,18 @@
                     <plugin>
                         <groupId>com.google.cloud.tools</groupId>
                         <artifactId>jib-maven-plugin</artifactId>
-                        <executions>
-                            <!-- deploy -->
-                            <execution>
-                                <id>build-default-versioned</id>
-                                <phase>deploy</phase>
-                                <goals>
-                                    <goal>build</goal>
-                                </goals>
-                                <configuration>
-                                    <to>
-                                        <image>docker.io/${image.repository}/${artifactId}:${image.tag}</image>
-                                    </to>
-                                </configuration>
-                            </execution>
-                            <execution>
-                                <id>build-default-latest</id>
-                                <phase>deploy</phase>
-                                <goals>
-                                    <goal>build</goal>
-                                </goals>
-                                <configuration>
-                                    <to>
-                                        <image>docker.io/${image.repository}/${artifactId}:latest</image>
-                                    </to>
-                                </configuration>
-                            </execution>
-                            <execution>
-                                <phase>deploy</phase>
-                                <goals>
-                                    <goal>build</goal>
-                                </goals>
-                                <id>build-distroless-versioned</id>
-                                <configuration>
-                                    <to>
-                                        <image>docker.io/${image.repository}/${artifactId}:${image.tag}-distroless</image>
-                                    </to>
-                                </configuration>
-                            </execution>
-                            <execution>
-                                <phase>deploy</phase>
-                                <goals>
-                                    <goal>build</goal>
-                                </goals>
-                                <id>build-distroless-latest</id>
-                                <configuration>
-                                    <to>
-                                        <image>docker.io/${image.repository}/${artifactId}:latest-distroless</image>
-                                    </to>
-                                </configuration>
-                            </execution>
-                            <execution>
-                                <id>build-rhel-versioned</id>
-                                <phase>deploy</phase>
-                                <goals>
-                                    <goal>build</goal>
-                                </goals>
-                                <configuration>
-                                    <to>
-                                        <image>docker.io/${image.repository}/${artifactId}:${image.tag}-rhel</image>
-                                    </to>
-                                    <from>
-                                        <image>registry.redhat.io/openjdk/openjdk-11-rhel7</image>
-                                        <auth>
-                                            <username>${rhel.username}</username>
-                                            <password>${rhel.password}</password>
-                                        </auth>
-                                    </from>
-                                </configuration>
-                            </execution>
-                            <execution>
-                                <id>build-rhel-latest</id>
-                                <phase>deploy</phase>
-                                <goals>
-                                    <goal>build</goal>
-                                </goals>
-                                <configuration>
-                                    <to>
-                                        <image>docker.io/${image.repository}/${artifactId}:latest-rhel</image>
-                                    </to>
-                                    <from>
-                                        <image>registry.redhat.io/openjdk/openjdk-11-rhel7</image>
-                                        <auth>
-                                            <username>${rhel.username}</username>
-                                            <password>${rhel.password}</password>
-                                        </auth>
-                                    </from>
-                                </configuration>
-                            </execution>
-                            <!-- install -->
-                            <execution>
-                                <id>install-default-versioned</id>
-                                <phase>install</phase>
-                                <goals>
-                                    <goal>dockerBuild</goal>
-                                </goals>
-                                <configuration>
-                                    <to>
-                                        <image>docker.io/${image.repository}/${artifactId}:${image.tag}</image>
-                                    </to>
-                                </configuration>
-                            </execution>
-                            <execution>
-                                <id>install-default-latest</id>
-                                <phase>install</phase>
-                                <goals>
-                                    <goal>dockerBuild</goal>
-                                </goals>
-                                <configuration>
-                                    <to>
-                                        <image>docker.io/${image.repository}/${artifactId}:latest</image>
-                                    </to>
-                                </configuration>
-                            </execution>
-                            <execution>
-                                <id>install-distroless-versioned</id>
-                                <phase>install</phase>
-                                <goals>
-                                    <goal>dockerBuild</goal>
-                                </goals>
-                                <configuration>
-                                    <to>
-                                        <image>docker.io/${image.repository}/${artifactId}:${image.tag}-distroless</image>
-                                    </to>
-                                </configuration>
-                            </execution>
-                            <execution>
-                                <id>install-distroless-latest</id>
-                                <phase>install</phase>
-                                <goals>
-                                    <goal>dockerBuild</goal>
-                                </goals>
-                                <configuration>
-                                    <to>
-                                        <image>docker.io/${image.repository}/${artifactId}:latest-distroless</image>
-                                    </to>
-                                </configuration>
-                            </execution>
-                            <execution>
-                                <id>install-rhel-versioned</id>
-                                <phase>install</phase>
-                                <goals>
-                                    <goal>dockerBuild</goal>
-                                </goals>
-                                <configuration>
-                                    <to>
-                                        <image>docker.io/${image.repository}/${artifactId}:${image.tag}-rhel</image>
-                                    </to>
-                                    <from>
-                                        <image>registry.redhat.io/openjdk/openjdk-11-rhel7</image>
-                                        <auth>
-                                            <username>${rhel.username}</username>
-                                            <password>${rhel.password}</password>
-                                        </auth>
-                                    </from>
-                                </configuration>
-                            </execution>
-                            <execution>
-                                <id>install-rhel-latest</id>
-                                <phase>install</phase>
-                                <goals>
-                                    <goal>dockerBuild</goal>
-                                </goals>
-                                <configuration>
-                                    <to>
-                                        <image>docker.io/${image.repository}/${artifactId}:latest-rhel</image>
-                                    </to>
-                                    <from>
-                                        <image>registry.redhat.io/openjdk/openjdk-11-rhel7</image>
-                                        <auth>
-                                            <username>${rhel.username}</username>
-                                            <password>${rhel.password}</password>
-                                        </auth>
-                                    </from>
-                                </configuration>
-                            </execution>
-                        </executions>
                         <!-- disables the micronaut plugin extension, that breaks the exectuion individual config -->
                         <configuration combine.self="override">
+                            <from>
+                                <image>registry.access.redhat.com/ubi8/openjdk-17:1.10-5</image>
+                            </from>
+                            <to>
+                                <image>${image.registry}/${image.repository}/${artifactId}</image>
+                                <tags>
+                                    <tag>${image.tag}</tag>
+                                    <tag>latest</tag>
+                                </tags>
+                            </to>
                             <container>
                                 <labels>
                                     <org.opencontainers.image.authors>${project.author.name} - ${project.author.email}</org.opencontainers.image.authors>
@@ -804,6 +644,22 @@
                                 </labels>
                             </container>
                         </configuration>
+                        <executions>
+                            <execution>
+                                <id>deploy</id>
+                                <phase>deploy</phase>
+                                <goals>
+                                    <goal>build</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>install</id>
+                                <phase>install</phase>
+                                <goals>
+                                    <goal>dockerBuild</goal>
+                                </goals>
+                            </execution>
+                        </executions>
                     </plugin>
                     <plugin>
                         <groupId>com.rodiontsev.maven.plugins</groupId>
